Add stocks controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.ai.openai.image.options.response_format=url
 spring.ai.openai.image.options.size=1024x1024
 spring.ai.openai.image.options.style=vivid
 #spring.ai.openai.image.options.style=natural
+
+# Currency API Key
+spring.ai.stock.api-key=${STOCK_API_KEY}
+spring.ai.stock.api-url=https://financialmodelingprep.com/api/v3/
