--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 spring.application.name=spring-ai
-spring.ai.openai.api-key=${OPENAI_API_KEY}
 
-# Chat options
+# Datasource options
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/chinook
+spring.datasource.username=postgres
+spring.datasource.password=machineai
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# OpenAI options
+spring.ai.openai.api-key=${OPENAI_API_KEY}
 spring.ai.openai.chat.options.model=gpt-4o
 
 # Image options
@@ -14,6 +20,6 @@ spring.ai.openai.image.options.size=1024x1024
 spring.ai.openai.image.options.style=vivid
 #spring.ai.openai.image.options.style=natural
 
-# Currency API Key
+# Stock API Key
 spring.ai.stock.api-key=${STOCK_API_KEY}
 spring.ai.stock.api-url=https://financialmodelingprep.com/api/v3/
