Change db from Chinook to Northwind

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,4 +1,4 @@
 FROM postgres:latest
-COPY chinook_init.sql /docker-entrypoint-initdb.d/
+COPY northwind_init.sql /docker-entrypoint-initdb.d/
 EXPOSE 5432
 CMD ["postgres"]
