--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=spring-ai
 
 # Datasource options
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/chinook
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/northwind
 spring.datasource.username=postgres
 spring.datasource.password=machineai
 spring.datasource.driver-class-name=org.postgresql.Driver
